# aurora_aim25

./: .gitignore  README.md
cmake/: vcpkg_setup.cmake
rm_auto_aim/: README.md
rm_auto_aim/armor_detector/: CMakeLists.txt  README.md
rm_auto_aim/armor_detector/cmake_modules/: FindG2O.cmake
rm_auto_aim/armor_detector/include/armor_detector/: armor_detector.hpp  armor_detector_node.hpp  armor_pose_estimator.hpp  ba_solver.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  types.hpp
rm_auto_aim/armor_detector/src/: armor_detector_node.cpp  armor_detector_opencv.cpp  armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp
rm_auto_aim/armor_detector/test/: test_detector.cpp
rm_auto_aim/armor_solver/: CMakeLists.txt
rm_auto_aim/armor_solver/src/: armor_solver.cpp  armor_solver_node.cpp  armor_tracker.cpp
rm_bringup/config/: launch_params.yaml
rm_bringup/config/node_params/: armor_solver_params.yaml  camera_driver_params.yaml  video_player_params.yaml  virtual_serial_params.yaml
rm_bringup/launch/: bringup.launch.py
rm_hardware_driver/rm_camera_driver/: CMakeLists.txt  package.xml
rm_hardware_driver/rm_camera_driver/src/: daheng_camera.cpp  recorder.cpp  video_player.cpp
rm_hardware_driver/rm_serial_driver/: CMakeLists.txt
rm_hardware_driver/rm_serial_driver/src/: serial_driver_node.cpp  virtual_serial_node.cpp
rm_hardware_driver/rm_serial_driver/test/: dummy_transporter.hpp  test_fixed_packet_tool.cpp
rm_rune/rune_detector/: CMakeLists.txt
rm_rune/rune_detector/src/: rune_detector.cpp  rune_detector_node.cpp
rm_rune/rune_detector/test/: test_detector.cpp  test_node_startup.cpp
rm_rune/rune_solver/: CMakeLists.txt
rm_rune/rune_solver/src/: curve_fitter.cpp  rune_solver.cpp  rune_solver_node.cpp
rm_rune/rune_solver/test/: test_node_startup.cpp
rm_utils/: CMakeLists.txt
rm_utils/include/rm_utils/: assert.hpp  common.hpp  heartbeat.hpp  thread_safe_queue.hpp  yaml.hpp  (+1 more)
rm_utils/src/: heartbeat.cpp  url_resolver.cpp
(+51 files in other folders)
